--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -31,44 +31,47 @@
             <div class="font-primary flex flex-col gap-8 md:mb-4">
                 <div class="carousel_pics duration-150">
                     {% for key, image in images_carousel %}
-                        <div class="{{ key > 1 ? (key + 1 == images_carousel|length ? 'invisible opacity-0' : null) : null }}" style="order: {{ key + 1 }}" data-image="{{ key }}" data-active="{{ key == 0 ? 'true' : 'false' }}">
+                        <div class="{{ key > 1 ? (key + 1 == images_carousel|length ? 'invisible opacity-0 group' : 'group') : 'group' }}" style="order: {{ key + 1 }}" data-image="{{ key }}" data-active="{{ key == 0 ? 'true' : 'false' }}">
                             <picture>
                                 <source srcset={{ asset( image.path|split('.')[0] ~"-extraLarge."~ image.path|split('.')[1]) }} media="(min-width : 1200px)">
                                 <source srcset={{ asset(image.path|split('.')[0] ~"-large."~ image.path|split('.')[1]) }} media="(min-width : 990px)">
                                 <source srcset={{ asset(image.path|split('.')[0] ~"-medium."~ image.path|split('.')[1]) }} media="(min-width : 768px)">
-                                <img class="" src={{ asset(image.path|split('.')[0] ~"-small."~image.path|split('.')[1]) }} alt="{{ image.description }}">
+                                <img class="" src={{ asset(image.path|split('.')[0] ~"-small."~ image.path|split('.')[1]) }} alt="{{ image.description }}">
                             </picture>
-                            <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="text-home-carousel lg:top-1/2 lg:relative lg:-translate-y-1/2">{{ image.title }}</p></div>
+                            <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="lg:text-xl  lg:top-1/2 lg:relative lg:-translate-y-1/2">{{ image.title }}</p></div>
                         </div>
                     {% endfor %}
-                        <div class="invisible opacity-0" style="order: 4" data-active="false">
+                        <div class="invisible opacity-0 group" style="order: 4" data-active="false" data-image="3">
                             <picture>
                                 <img class="" src="/images/resize/barista-5055060-960-720-64197891cdd3d-extraLarge.jpg" alt="">
                             </picture>
-                            <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="text-home-carousel lg:top-1/2 lg:relative lg:-translate-y-1/2"></p></div>
+                            <div class="title-hover absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="lg:text-xl  lg:top-1/2 lg:relative lg:-translate-y-1/2"></p></div>
                         </div>
-                        <div class="invisible opacity-0" style="order: 5" data-active="false" data-image="4">
+                        <div class="invisible opacity-0 group" style="order: 5" data-active="false" data-image="4">
                             <picture>
                                 <img class="" src="/images/resize/barista-5055060-960-720-64197891cdd3d-extraLarge.jpg" alt="">
                             </picture>
-                            <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="text-home-carousel lg:top-1/2 lg:relative lg:-translate-y-1/2"></p></div>
+                            <div class="title-hover absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="lg:text-xl  lg:top-1/2 lg:relative lg:-translate-y-1/2"></p></div>
                         </div>
-                        <div class="" style="order: 2" data-image="5" data-active="false">
+                        <div class="group" style="order: 2" data-image="5" data-active="false">
                             <picture>
                                 <source srcset="/images/resize/nadine-primeau-xLskrI8Dw68-unsplash-64197cd813a16-extraLarge.jpg" media="(min-width : 1200px)">
                                 <source srcset="/images/resize/nadine-primeau-xLskrI8Dw68-unsplash-64197cd813a16-large.jpg" media="(min-width : 990px)">
                                 <source srcset="/images/resize/nadine-primeau-xLskrI8Dw68-unsplash-64197cd813a16-medium.jpg" media="(min-width : 768px)">
                                 <img class="" src="/images/resize/nadine-primeau-xLskrI8Dw68-unsplash-64197cd813a16-small.jpg" alt="Coupe de glace à la myrtille.">
                             </picture>
-                            <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="text-home-carousel lg:top-1/2 lg:relative lg:-translate-y-1/2">Coupe des montagnes</p></div>
+                            <div class="title-hover absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class=" lg:top-1/2 lg:relative lg:-translate-y-1/2">Coupe des montagnes</p></div>
                         </div>
                     </div>
                     <div class="flex justify-center items-center gap-4" id="home_buttons">
-                        <button aria-label="gauche" class="text-lg"><i class="fa-solid fa-arrow-left"></i></button>
+                        <button aria-label="gauche" class="text-lg hover:scale-110"><i class="fa-solid fa-arrow-left"></i></button>
                         {% for key, image in images_carousel %}
                         <button class="{{ key == 0 ? "carousel_button active" : "carousel_button" }}" data-button="{{ key }}"></button>
                         {% endfor %}
-                        <button aria-label="droite" class="text-lg"><i class="fa-solid fa-arrow-right"></i></button>
+                        <button class="carousel_button" data-button="3"></button>
+                        <button class="carousel_button" data-button="4"></button>
+                        <button class="carousel_button" data-button="5"></button>
+                        <button aria-label="droite" class="text-lg hover:scale-110"><i class="fa-solid fa-arrow-right"></i></button>
                     </div>
                 </div>
             <p class="text-center my-7 leading-8 md:text-1.5xl md:max-w-[810px] md:mx-auto md:mb-12" >À coeur de travailler avec les <span class="text-lg md:text-2xl">produits</span> et <span class="text-lg md:text-2xl">producteurs</span> de la région, le <span class="text-lg md:text-2xl">Chef Arnaud Michant</span> vous garantit une expérience <span class="text-lg md:text-2xl">unique</span> !</p>
