--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -12,14 +12,14 @@
                 <h1 class="font-secondary text-home-title flex flex-col items-start md:w-[500px] ld:w-[780px]">Bienvenue au <span class="font-primary text-home-quai pt-2 self-center">Quai Antique</span></h1>
                 <div class="font-secondary pt-8 text-home-2 md:flex md:gap-2">
                     <p class="">Un restaurant</p>
-                    <ul class="flex flex-col items-center">
+                    <ul class="flex flex-col items-center relative" id="text-move">
                         <li class="active">
                             <p>convivial</p>
                         </li>
-                        <li class="hidden">
+                        <li class="absolute down left-0">
                             <p>familial</p>
                         </li>
-                        <li class="hidden">
+                        <li class="absolute down left-0">
                             <p>authentique</p>
                         </li>
                     </ul>
@@ -74,8 +74,8 @@
                         <button aria-label="droite" class="text-lg hover:scale-110"><i class="fa-solid fa-arrow-right"></i></button>
                     </div>
                 </div>
-            <p class="text-center my-7 leading-8 md:text-1.5xl md:max-w-[810px] md:mx-auto md:mb-12" >À coeur de travailler avec les <span class="text-lg md:text-2xl">produits</span> et <span class="text-lg md:text-2xl">producteurs</span> de la région, le <span class="text-lg md:text-2xl">Chef Arnaud Michant</span> vous garantit une expérience <span class="text-lg md:text-2xl">unique</span> !</p>
-            <div class="bg-secondary drop-shadow-lg text-primary h-[58px] w-[170px] relative left-1/2 -translate-x-1/2 hover:bg-400 duration-150 group cursor-pointer flex justify-center items-center"><a href="" class="text-[1.3rem] group-hover:text-secondary duration-150 md:text-2xl ">Réserver</a></div>
+            <p class="text-center my-7 leading-8 md:max-w-[810px] md:mx-auto md:mb-12 text-lg" >À coeur de travailler avec les <span class="text-lg">produits</span> et <span class="text-lg">producteurs</span> de la région, le <span class="text-lg">Chef Arnaud Michant</span> vous garantit une expérience <span class="text-lg">unique</span> !</p>
+            <div class="bg-secondary mb-7 drop-shadow-lg text-primary h-[58px] w-[170px] relative left-1/2 -translate-x-1/2 hover:bg-400 duration-150 group cursor-pointer flex justify-center items-center"><a href="" class="text-[1.3rem] group-hover:text-secondary duration-150 ">Réserver</a></div>
         </section>
     </main> 
 {% endblock %}
