--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -16,10 +16,10 @@
                         <li class="active">
                             <p>convivial</p>
                         </li>
-                        <li class="absolute down left-0">
+                        <li class="absolute down md:left-0">
                             <p>familial</p>
                         </li>
-                        <li class="absolute down left-0">
+                        <li class="absolute down md:left-0">
                             <p>authentique</p>
                         </li>
                     </ul>
