--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,137 +1,191 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Quai Antique | {% block title %}{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<title>Quai Antique |
+			{% block title %}{% endblock %}
+		</title>
+		<link
+		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+		{% block stylesheets %}
+			{{ encore_entry_link_tags('app') }}
+		{% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body class="bg-primary min-h-screen w-full overflow-x-hidden">
-        {% block header %}
-            <header class="no_print z-10 h-[110px] w-full absolute flex justify-between px-6 py-3 md:px-12">
-                <a href="{{ path('home') }}" class=""><img src={{ asset('/images/svg/'~ "logo-white.svg")}} alt="Logo Quai Antique blanc" class="h-full"></a>
-                <button class="md.5:hidden"><img src={{ asset('/images/svg/'~ "hamburger-open.svg") }} alt="Open menu"></button>
-                <nav class="hidden md.5:block uppercase"> 
-                    <ul class="md.5:inline-flex md.5:gap-6 lg:gap-12 text-secondary font-secondary relative top-[57px] xl:text-lg">
-                        <li><a href={{ path('home') }} class="active">Accueil</a></li>
-                        <li><a href={{ path('card') }}>Carte</a></li>
-                        {% if app.user and 'ROLE_ADMIN' in app.user.roles %}
-                            <li><a class="" href="{{ url('admin_reservations', { 'service' : 'midi' }) }}">Réservations</a></li>
-                        {% else %}
-                            <li><a href={{ path('reservation') }}>Réserver</a></li>
-                        {% endif %}
-                        <li><a href={{ path('contact') }}>Contact</a></li>
-                        {% if app.user %}
-                                {% if 'ROLE_ADMIN' in app.user.roles %}
-                                    <li><a class="" href="{{ url('admin_profil', {'page_up':'informations', 'page_down' : 'carousel'}) }}">Profil</a></li>
-                                {% else %}
-                                    <li><a class="" href="{{ url('client_profil', {'page_down' : 'modèles' }) }}">Profil</a></li>
-                                {% endif %}
-                        <li><a href={{ path('logout') }}>Deconnexion</a></li>
-                        {% else %}
-                        <li><a href={{ path('login') }}>Connexion</a></li>
-                        <li><a href={{ path('sign_up') }}>Inscription</a></li>
-                        {% endif %}
-                    </ul>
-                </nav>
-            </header>
-        {% endblock %}
-        {% block body %}{% endblock %}
-        {% block footer %}
-            <footer class="no_print bg-500 text-secondary font-third py-4 px-5 w-full md:flex md:justify-center text-sm">
-                <div class="grid max-w-[440px] mx-auto md:w-fit md:max-w-[340px] md:min-w-[300px] md:mx-0 lg:w-[400px]">
-                    <p class="footer_title">Horaires</p>
-                    <ul class = "scedules text-xs">
-                        <li>Lundi
-                            <ul>
-                                <li>Fermé</li>
-                                <li>19:00 - 22:00</li>
-                            </ul>
-                        </li>
-                        <li>Mardi
-                            <ul>
-                                <li>Fermé</li>
-                                <li>Fermé</li>
-                            </ul>
-                        </li>
-                        <li>Mercredi
-                            <ul>
-                                <li>11:30 - 15:00</li>
-                                <li>19:00 - 22:00</li>
-                            </ul>
-                        </li>
-                        <li>Jeudi
-                            <ul>
-                                <li>11:30 - 15:00</li>
-                                <li>19:00 - 22:00</li>
-                            </ul>
-                        </li>
-                        <li>Vendredi
-                            <ul>
-                                <li>11:30 - 15:00</li>
-                                <li>19:00 - 22:00</li>
-                            </ul>
-                        </li>
-                        <li>Samedi
-                            <ul>
-                                <li>11:30 - 15:00</li>
-                                <li>19:00 - 22:00</li>
-                            </ul>
-                        </li>
-                        <li>Dimanche                   
-                            <ul>
-                                <li>11:30 - 15:00</li>
-                                <li>19:00 - 22:00</li>
-                            </ul>
-                        </li> 
-                    </ul>
-                </div>
-                <div class="sm:flex gap-6 max-w-[440px] mx-auto md:mx-0 lg:max-w-[600px]">
-                    <div class="grid grid-cols-2 my-4 sm:flex-1 sm:flex sm:gap-6 md:my-0">
-                        <div>
-                            <p class="footer_title">Site</p>
-                            <ul class="text-xs">
-                                <li><a class="hover:underline hover:underline-offset-2" href="{{ path('home') }}">Accueil</a></li>
-                                <li><a class="hover:underline hover:underline-offset-2" href="">Carte</a></li>
-                                <li><a class="hover:underline hover:underline-offset-2" href="">Réserver</a></li>
-                                <li><a class="hover:underline hover:underline-offset-2" href="">Contact</a></li>
-                                {% if app.user %}
-                                    {% if app.user.roles == 'ROLE_ADMIN' %}
-                                    <li><a class="hover:underline hover:underline-offset-2" href="{{ path('admin_profil') }}">Profil</a></li>
-                                    {% else %}
-                                    <li><a class="hover:underline hover:underline-offset-2" href="">Profil</a></li>
-                                    {% endif %}
-                                <li><a class="hover:underline hover:underline-offset-2" href="">Deconnexion</a></li>
-                                {% else %}
-                                <li><a class="hover:underline hover:underline-offset-2" href="">Connexion</a></li>
-                                <li><a class="hover:underline hover:underline-offset-2" href="">Inscription</a></li>
-                                {% endif %}
-                            </ul>
-                        </div>
-                        <div>
-                            <p class="footer_title">Contact</p>
-                            <ul class="text-xs">
-                                <li><a class="hover:underline hover:underline-offset-2" href="tel:">+33 00 00 00 00 00</a></li>
-                                <li><a class="hover:underline hover:underline-offset-2" href="mailto:lorem@ipsum.com">lorem@ipsum.com</a></li>
-                                <li><a class="hover:underline hover:underline-offset-2" href=""><i class="fa-brands fa-square-facebook text-2xl mt-1"></a></i></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <a href="{{ path('home') }}" ><img class="max-w-[160px] mx-auto sm:inline-block sm:w-fit sm:mx-0" src={{ asset('/images/svg/'~'logo-white.svg')}} alt=""></a>
-                </div>
-            </footer>
-        {% endblock %}
-        <script src="https://kit.fontawesome.com/4ba6d56c15.js" crossorigin="anonymous"></script>
-        {% block scripts %}
-        {% endblock %}
-    </body>
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
+	</head>
+	<body class="bg-primary min-h-screen w-full overflow-x-hidden">
+		{% block header %}
+			<header class="no_print z-10 h-[80px] md:h-[100px] w-full absolute flex justify-between px-6 py-3 md:px-12 bg-transparent duration-300">
+				<a href="{{ path('home') }}" class=""><img src={{ asset('/images/svg/'~ "logo-white.svg")}} alt="Logo Quai Antique blanc" class="h-full"></a>
+				<button class="md/5:hidden z-20 md/5:z-0" id="menu-hamburger">
+					<div class="hamburger-lines close">
+						<span class="line line1"></span>
+						<span class="line line2"></span>
+						<span class="line line3"></span>
+					</div>
+				</button>
+				<nav class="hidden md/5:flex md/5:items-center uppercase duration bg-primary" id="header-menu">
+					<ul class="md/5:inline-flex text-secondary font-secondary relative top-[57px] text-sm xl:text-lg">
+						<li>
+							<a href={{ path('home') }} class="active">Accueil</a>
+						</li>
+						<li>
+							<a href={{ path('card') }}>Carte</a>
+						</li>
+						{% if app.user and 'ROLE_ADMIN' in app.user.roles %}
+							<li>
+								<a class="" href="{{ url('admin_reservations', { 'service' : 'midi' }) }}">Réservations</a>
+							</li>
+						{% else %}
+							<li>
+								<a href={{ path('reservation') }}>Réserver</a>
+							</li>
+						{% endif %}
+						<li>
+							<a href={{ path('contact') }}>Contact</a>
+						</li>
+						{% if app.user %}
+							{% if 'ROLE_ADMIN' in app.user.roles %}
+								<li>
+									<a class="" href="{{ url('admin_profil', {'page_up':'informations', 'page_down' : 'carousel'}) }}">Profil</a>
+								</li>
+							{% else %}
+								<li>
+									<a class="" href="{{ url('client_profil', {'page_down' : 'modèles' }) }}">Profil</a>
+								</li>
+							{% endif %}
+							<li>
+								<a href={{ path('logout') }}>Deconnexion</a>
+							</li>
+						{% else %}
+							<li>
+								<a href={{ path('login') }}>Connexion</a>
+							</li>
+							<li>
+								<a href={{ path('sign_up') }}>Inscription</a>
+							</li>
+						{% endif %}
+					</ul>
+				</nav>
+			</header>
+		{% endblock %}
+		{% block body %}{% endblock %}
+		{% block footer %}
+			<footer class="no_print bg-500 text-secondary font-third py-4 px-5 w-full md:flex md:justify-center text-sm">
+				<div class="grid max-w-[440px] mx-auto md:w-fit md:max-w-[340px] md:min-w-[300px] md:mx-0 lg:w-[400px]">
+					<p class="footer_title">Horaires</p>
+					<ul class="scedules text-xs">
+						<li>Lundi
+							<ul>
+								<li>Fermé</li>
+								<li>19:00 - 22:00</li>
+							</ul>
+						</li>
+						<li>Mardi
+							<ul>
+								<li>Fermé</li>
+								<li>Fermé</li>
+							</ul>
+						</li>
+						<li>Mercredi
+							<ul>
+								<li>11:30 - 15:00</li>
+								<li>19:00 - 22:00</li>
+							</ul>
+						</li>
+						<li>Jeudi
+							<ul>
+								<li>11:30 - 15:00</li>
+								<li>19:00 - 22:00</li>
+							</ul>
+						</li>
+						<li>Vendredi
+							<ul>
+								<li>11:30 - 15:00</li>
+								<li>19:00 - 22:00</li>
+							</ul>
+						</li>
+						<li>Samedi
+							<ul>
+								<li>11:30 - 15:00</li>
+								<li>19:00 - 22:00</li>
+							</ul>
+						</li>
+						<li>Dimanche
+							<ul>
+								<li>11:30 - 15:00</li>
+								<li>19:00 - 22:00</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+				<div class="sm:flex gap-6 max-w-[440px] mx-auto md:mx-0 lg:max-w-[600px]">
+					<div class="grid grid-cols-2 my-4 sm:flex-1 sm:flex sm:gap-6 md:my-0">
+						<div>
+							<p class="footer_title">Site</p>
+							<ul class="text-xs">
+								<li>
+									<a class="hover:underline hover:underline-offset-2" href="{{ path('home') }}">Accueil</a>
+								</li>
+								<li>
+									<a class="hover:underline hover:underline-offset-2" href="">Carte</a>
+								</li>
+								<li>
+									<a class="hover:underline hover:underline-offset-2" href="">Réserver</a>
+								</li>
+								<li>
+									<a class="hover:underline hover:underline-offset-2" href="">Contact</a>
+								</li>
+								{% if app.user %}
+									{% if app.user.roles == 'ROLE_ADMIN' %}
+										<li>
+											<a class="hover:underline hover:underline-offset-2" href="{{ path('admin_profil') }}">Profil</a>
+										</li>
+									{% else %}
+										<li>
+											<a class="hover:underline hover:underline-offset-2" href="">Profil</a>
+										</li>
+									{% endif %}
+									<li>
+										<a class="hover:underline hover:underline-offset-2" href="">Deconnexion</a>
+									</li>
+								{% else %}
+									<li>
+										<a class="hover:underline hover:underline-offset-2" href="">Connexion</a>
+									</li>
+									<li>
+										<a class="hover:underline hover:underline-offset-2" href="">Inscription</a>
+									</li>
+								{% endif %}
+							</ul>
+						</div>
+						<div>
+							<p class="footer_title">Contact</p>
+							<ul class="text-xs">
+								<li>
+									<a class="hover:underline hover:underline-offset-2" href="tel:">+33 00 00 00 00 00</a>
+								</li>
+								<li>
+									<a class="hover:underline hover:underline-offset-2" href="mailto:lorem@ipsum.com">lorem@ipsum.com</a>
+								</li>
+								<li>
+									<a class="hover:underline hover:underline-offset-2" href="">
+										<i class="fa-brands fa-square-facebook text-2xl mt-1"></a>
+									</i>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<a href="{{ path('home') }}"><img class="max-w-[160px] mx-auto sm:inline-block sm:w-fit sm:mx-0" src={{ asset('/images/svg/'~'logo-white.svg')}} alt=""></a>
+				</div>
+			</footer>
+		{% endblock %}
+		<script src="https://kit.fontawesome.com/4ba6d56c15.js" crossorigin="anonymous"></script>
+		<script src={{ asset('/js/global-script.js') }}></script>
+		{% block scripts %}{% endblock %}
+	</body>
 </html>
- 
