--- a/templates/Reservation/user/reservation.user.html.twig
+++ b/templates/Reservation/user/reservation.user.html.twig
@@ -3,7 +3,7 @@
 {% block reservation %}
 <div class="w-full lg:w-[45%] reservation_container my-8 mx-4 md:mx-8 ">
 	<div class="w-full mx-auto relative top-1/2 -translate-y-1/2 pb-16">
-		<h1 class="font-primary text-3xl mb-16 max-w-[589px] w-11/12 mx-auto lg:mx-auto lg:w-5/6">Faites votre réservation</h1>
+		<h1 class="title_section">Faites votre réservation</h1>
 		{% if error %}
 			<div class="error_container text-sm">{{ error }}</div>
 		{% endif %}
