--- a/templates/Card/card.html.twig
+++ b/templates/Card/card.html.twig
@@ -4,66 +4,69 @@
 
 
 {% block body %}
-    <main class="w-full min-h-screen pt-28 px-6 flex flex-col overflow-hidden">
+    <main class="w-full min-h-screen pt-24 px-6 flex flex-col overflow-hidden">
         <div class="title_container bg-primary">
-            <h1 class="title_section">Carte</h1>
-            <img src={{ asset('/images/svg/'~ "line-white.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px]">
+            <h1 class="title_section text-secondary mt-8">À la carte</h1>
         </div>
         {% block section %}
-        <div class="main-content ease-in duration-500 min-h-full">
-            <section class="text-secondary font-primary section_card flex items-center">
-                <ul class="diamonds grid grid-cols-2 gap-2 rotate-45 lg:gap-4 flex-1 ">
-                    <li id="card-starter" class="relative left-full -translate-x-full">
+        <div class="main-content min-h-full">
+            <section class="">
+                <ul class="card_grid">
+                    <li class="group">
                         <a href="{{ path('card-starter') }}">
-                            <div></div>
                             <picture>
                                 <source srcset={{ asset('/images/card/'~"starter-extraLarge.jpg") }} media="(min-width : 1200px)">
                                 <source srcset={{ asset('/images/card/'~"starter-large.jpg") }} media="(min-width : 990px)">
                                 <source srcset={{ asset('/images/card/'~"starter-medium.jpg") }} media="(min-width : 768px)">
                                 <img src={{ asset('/images/card/'~'starter-small.jpg')}} alt="Demi-camembert roti sur lit de salade">
                             </picture>
-                            <h2 class="z-0">Entrées</h2>
+                            <div class="lg:group-hover:scale-150 card_title-container">
+                                <h2 class="">Entrées</h2>
+                            </div>
                         </a>
                     </li>
-                    <li id="card-main">
+                    <li class="group">
                         <a href="{{ path('card-main') }}">
-                            <div></div>
                             <picture>
                                 <source srcset={{ asset('/images/card/'~"main-large.jpg") }} media="(min-width : 990px)">
                                 <source srcset={{ asset('/images/card/'~"main-medium.jpg") }} media="(min-width : 768px)">
                                 <source srcset={{ asset('/images/card/'~"main-extraLarge.jpg") }} media="(min-width : 1200px)">
-                            <img src={{ asset('/images/card/'~'main-small.jpg')}} alt="Marmitte e crozets aux noix de saint Jacques">
+                            <img src={{ asset('/images/card/'~'main-small.jpg')}} alt="Marmitte de crozets aux noix de saint Jacques">
                             </picture>
-                            <h2 class="z-0">Plats</h2>
+                            <div class="lg:group-hover:scale-150 card_title-container">
+                                <h2 class="">Plats</h2>
+                            </div>
                         </a>
                     </li>
-                    <li id="card-dessert" class="relative left-full -translate-x-full">
+                    <li class="group">
                         <a href="{{ path('card-dessert') }}">
-                            <div></div>
                             <picture>
                                 <source srcset={{ asset('/images/card/'~"dessert-extraLarge.jpg") }} media="(min-width : 1200px)">
                                 <source srcset={{ asset('/images/card/'~"dessert-large.jpg") }} media="(min-width : 990px)">
                                 <source srcset={{ asset('/images/card/'~"dessert-medium.jpg") }} media="(min-width : 768px)">
                                 <img src={{ asset('/images/card/'~'dessert-small.jpg')}} alt="Nougat glace et son coulis de myrtilles">
                             </picture>
-                            <h2 class="z-0">Desserts</h2>
+                            <div class="lg:group-hover:scale-150 card_title-container">
+                                <h2 class="">Desserts</h2>
+                            </div>
                         </a>
                     </li>
-                    <li id="card-menus">
+                    <li class="group">
                         <a href="{{ path('card-menus') }}">
-                            <div></div>
                             <picture>
                                 <source srcset={{ asset('/images/card/'~"menu-extraLarge.jpg") }} media="(min-width : 1200px)">
                                 <source srcset={{ asset('/images/card/'~"menu-large.jpg") }} media="(min-width : 990px)">
                                 <source srcset={{ asset('/images/card/'~"menu-medium.jpg") }} media="(min-width : 768px)">
                                 <img src={{ asset('/images/card/'~'menu-small.jpg')}} alt="Service de plusieurs assiettes en cuisine">
                             </picture>
-                            <h2 class="z-0">Menus</h2>
+                            <div class="lg:group-hover:scale-150 card_title-container">
+                                <h2 class="">Menus</h2>
+                            </div>
                         </a>
                     </li>
                 </ul>
             </section>
-            <div class="h-[42px] w-[200px] bg-secondary drop-shadow-lg mx-auto cursor-pointer flex items-center justify-center hover:bg-400 group duration-150 md:w-[350px] md:h-[70px] md:text-1.5xl" id="card-booking"><a href="" class="text-primary font-secondary group-hover:text-secondary duration-150">Réservez maintenant !</a></div>
+            <div class=" my-12 h-12 w-[200px] bg-secondary drop-shadow-lg m-auto cursor-pointer flex items-center justify-center hover:bg-400 group duration-150 md:w-[280px] md:h-[70px]" id="card-booking"><a href="" class="text-primary font-secondary group-hover:text-secondary duration-150 text-lg lg:text-xl">Réservez maintenant !</a></div>
         </div>
         {% endblock %}
     </main>
