--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -231,24 +231,6 @@ header nav a.active::after {
 .card-items {
   @apply grid gap-4 mb-4;
 }
-.card-items_menus {
-  @apply grid gap-7;
-}
-.card-items_menus h3 {
-  @apply text-1.5xl;
-}
-.card-items_menus .condition {
-  @apply text-xs;
-}
-.menu-formula {
-  @apply flex gap-3 font-third;
-}
-.menu-formula div {
-  @apply flex-1;
-}
-.menu-formula h4 {
-  @apply font-secondary text-xl leading-5;
-}
 .card-items li {
   @apply flex gap-3 md:gap-6;
 }
@@ -257,6 +239,9 @@ header nav a.active::after {
 }
 .card-items h3 {
   @apply font-secondary;
+}
+#menu h3 {
+  @apply font-primary;
 }
 .card-items h3,
 .price {
@@ -274,6 +259,17 @@ header nav a.active::after {
 }
 .button-change a {
   @apply text-primary text-2xl md:text-4xl duration-150;
+}
+.offer-items {
+  @apply font-third;
+}
+.card_backLink {
+  @apply text-secondary text-center font-secondary w-fit mx-auto relative 
+  after:content-[''] after:top-full after:right-0 after:rotate-180 after:absolute after:w-0 after:bg-secondary after:h-px 
+  duration-150 ease-in hover:after:w-full;
+}
+.card_backLink::after {
+  transition: width 150ms;
 }
 /* CONTACT  */
 .form_contact label {
