--- a/templates/Card/Main/main.card.html.twig
+++ b/templates/Card/Main/main.card.html.twig
@@ -4,59 +4,26 @@
 {% block subTitle %} - Plats{% endblock %}
 
 {% block section %}
-<div class="main-content">
+<div class="main-content flex-col">
     <section class="" id="section-starter">
-        <div class="box"><img src={{ asset('/images/svg/'~'Rectangle.svg') }} alt=""></img></div>
-        <div class="container-card blank sm-cardButton:flex">
-            <div class="sm-cardButton:order-last">
-                <div class="card_titles">
-                    <h2 class="">Plats</h2>
-                    <img src={{ asset('/images/svg/'~ "line-sub.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px] -mt-2 md:w-[150px]">
-                </div>
+        <fieldset class="w-11/12 mx-auto max-w-[598px] border border-solid border-500 p-3 ">
+            <legend>
+                <h2 class="px-2 text-xl">Plats</h2>
+            </legend>
                 <ul class="card-items">
-                    <li>
-                        <div>
-                            <h3>L'authentique farçon savoyard maison</h3>
-                            <p class="comment" >Râpé de patates servie avec charcuterie, salade mêlée et sa sauce fromage blanc</p>
-                        </div>
-                        <p class="price">19,90</p>
-                    </li>
-                    <li>
-                        <div>
-                            <h3>La Croziflette royale</h3>
-                            <p class="comment" >Gratiné de Crozet au sarrasin de fabrication artisanal, lardons, oignons, Reblochon, servie avec Jambon sec de Savoie et salade mêlée</p>
-                        </div>
-                        <p class="price">28,00</p>
-                    </li>
-                    <li>
-                        <div>
-                            <h3>Marmite de crozets aux noix de saint Jacques</h3>
-                            <p class="comment" >Sauce crustacées, gratinée au beaufort</p>
-                        </div>
-                        <p class="price">29,40</p>
-                    </li>
-                    <li>
-                        <div>
-                            <h3>Fondue traditionnelle</h3>
-                            <p class="comment" >Servie avec sa salade mêlée et patates, mini 2pers, prix par pers</p>
-                        </div>
-                        <p class="price">29,90</p>
-                    </li>
-                    <li>
-                        <div>
-                            <h3>Fondue Royale</h3>
-                            <p class="comment" >Fondue aux cèpes et Jambon sec de Savoie, mini 2pers, prix par pers</p>
-                        </div>
-                        <p class="price">37,90</p>
-                    </li>
+                    {% for food in foods %}
+                        <li>
+                            <div>
+                                <h3>{{ food.title }}</h3>
+                                <p class="comment" >{{ food.description}}</p>
+                            </div>
+                            <p class="price">{{ food.price|number_format(2, '.', ',') }}</p>
+                        </li>
+                    {% endfor %}
                 </ul>
-            </div>
-            <div class="button-change group sm-cardButton:absolute sm-cardButton:top-1/2 sm-cardButton:-translate-y-1/2 sm-cardButton:-left-[80px] md-cardButton:-left-[135px]" id="back-button"><a href="{{ path('card') }}" class="group-hover:text-secondary"><i class="fa-solid fa-arrow-left"></i></a></button>
-    </div>
+        </fieldset>
     </section>
+    <div class="my-12 h-12 w-[200px] bg-secondary drop-shadow-lg m-auto cursor-pointer flex items-center justify-center hover:bg-400 group duration-150 md:w-[280px] md:h-[70px]" id="card-booking"><a href="" class="text-primary font-secondary group-hover:text-secondary duration-150 text-lg lg:text-xl">Réservez maintenant !</a></div>
+    <a href="{{ path('card') }}" class="card_backLink"><i class="fa-solid fa-arrow-left px-2"></i>Revenir à la sélection</a>
 </div>
-{% endblock %}
-
-{% block scripts %}
-    <script src={{ asset('/js/card/'~'script-options.js') }}></script>
 {% endblock %}
