--- a/templates/Card/Starter/starter.card.html.twig
+++ b/templates/Card/Starter/starter.card.html.twig
@@ -5,43 +5,26 @@
 {% block subTitle %} - Entrées{% endblock %}
 
 {% block section %}
-<div class="main-content">
+<div class="main-content flex-col">
     <section class="" id="section-starter">
-        <div class="box"><img src={{ asset('/images/svg/'~'Rectangle.svg') }} alt=""></img></div>
-        <div class="container-card blank">
-            <div class="card_titles">
-                <h2 class="">Entrées</h2>
-                <img src={{ asset('/images/svg/'~ "line-sub.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px] -mt-2 md:w-[150px]">
-            </div>
-            <ul class="card-items">
-                <li>
-                    <div>
-                        <h3>Assiette de cochonailles</h3>
-                        <p class="comment" >Jabon sec de Savoie, saucisson de Savoie, coppa (IGP)</p>
-                    </div>
-                    <p class="price">13,00</p>
-                </li>
-                <li>
-                    <div>
-                        <h3>Demi-camembert roti sur lit de salade melée et son lard grillé</h3>
-                        <p class="comment" >Camembert au lait cru</p>
-                    </div>
-                    <p class="price">15,50</p>
-                </li>
-                <li>
-                    <div>
-                        <h3>Escalope de foie gras poëlée au miel et compotée d'oignons doux des Cévennes (AOP)</h3>
-                        <p class="comment" >Miel de Savoie</p>
-                    </div>
-                    <p class="price">28,00</p>
-                </li>
-            </ul>
-            <div class="button-change group" id="back-button"><a href="{{ path('card') }}" class="group-hover:text-secondary"><i class="fa-solid fa-arrow-down"></i></a></button>
-    </div>
+        <fieldset class="w-11/12 mx-auto max-w-[598px] border border-solid border-500 p-3 ">
+            <legend>
+                <h2 class="px-2 text-xl">Entrées</h2>
+            </legend>
+                <ul class="card-items">
+                    {% for food in foods %}
+                        <li>
+                            <div>
+                                <h3>{{ food.title }}</h3>
+                                <p class="comment" >{{ food.description}}</p>
+                            </div>
+                            <p class="price">{{ food.price|number_format(2, '.', ',') }}</p>
+                        </li>
+                    {% endfor %}
+                </ul>
+        </fieldset>
     </section>
+    <div class="my-12 h-12 w-[200px] bg-secondary drop-shadow-lg m-auto cursor-pointer flex items-center justify-center hover:bg-400 group duration-150 md:w-[280px] md:h-[70px]" id="card-booking"><a href="" class="text-primary font-secondary group-hover:text-secondary duration-150 text-lg lg:text-xl">Réservez maintenant !</a></div>
+    <a href="{{ path('card') }}" class="card_backLink"><i class="fa-solid fa-arrow-left px-2"></i>Revenir à la sélection</a>
 </div>
-{% endblock %}
-
-{% block scripts %}
-    <script src={{ asset('/js/card/'~'script-options.js') }}></script>
 {% endblock %}
