--- a/templates/Reservation/user/reservation.user.html.twig
+++ b/templates/Reservation/user/reservation.user.html.twig
@@ -17,7 +17,7 @@
 						<div>
 							<label for="template" class="text-lg">Fiches de pré-révervation :
 							</label>
-							<div class="h-8 flex items-center bg-500 relative">
+							<div class="form_inputContainer_2">
 								<i class="fa-solid fa-file-lines form_icon"></i>
 								<div class="absolute right-8">
 									<div class="" id="spinner_template">
@@ -39,7 +39,7 @@
 					{% endif %}
 					<div>
 						<label class="text-lg" for="name">Nom :<label>
-								<div class="h-8 flex items-center bg-500">
+								<div class="form_inputContainer_2">
 									<i class="fa-solid fa-user form_icon"></i>
 									<input type="text" id="name" name="name" minlength="2" maxlength="100" required class="pl-2 w-full bg-500 placeholder:text-secondary/50" placeholder="Nom de la réservation...">
 								</div>
@@ -135,14 +135,14 @@
 								<div class="flex-1 flex flex-col gap-2">
 									<div class="summary_container">
 										<p>Nom :</p>
-										<div class="h-8 flex items-center bg-500">
+										<div class="form_inputContainer_2">
 											<i class="fa-solid fa-user form_icon"></i>
 											<p id="summary_name">Test</p>
 										</div>
 									</div>
 									<div class="summary_container">
 										<p>Couverts :</p>
-										<div class="h-8 flex items-center bg-500">
+										<div class="form_inputContainer_2">
 											<i class="fa-solid fa-utensils form_icon"></i>
 											<p id="summary_places"></p>
 										</div>
@@ -156,21 +156,21 @@
 									</div>
 									<div class="summary_container">
 										<p>Date :</p>
-										<div class="h-8 flex items-center bg-500">
+										<div class="form_inputContainer_2">
 											<i class="fa-solid fa-calendar form_icon"></i>
 											<p id="summary_date"></p>
 										</div>
 									</div>
 									<div class="summary_container">
 										<p>Service :</p>
-										<div class="h-8 flex items-center bg-500" id="summary_service">
+										<div class="form_inputContainer_2" id="summary_service">
 											<i class="fa-solid form_icon"></i>
 											<p></p>
 										</div>
 									</div>
 									<div class="summary_container">
 										<p>Horaire :</p>
-										<div class="h-8 flex items-center bg-500">
+										<div class="form_inputContainer_2">
 											<i class="fa-solid fa-clock form_icon"></i>
 											<p id="summary_schedule"></p>
 										</div>
