--- a/templates/Card/card.html.twig
+++ b/templates/Card/card.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
     <main class="w-full min-h-screen pt-24 px-6 flex flex-col overflow-hidden">
         <div class="title_container bg-primary">
-            <h1 class="title_section text-secondary mt-8">À la carte</h1>
+            <h1 class="title_section mt-8">À la carte</h1>
         </div>
         {% block section %}
         <div class="main-content min-h-full">
