--- a/templates/Reservation/user/reservation.user.html.twig
+++ b/templates/Reservation/user/reservation.user.html.twig
@@ -203,7 +203,7 @@
 
 						</div>
 					{% elseif not 'ROLE_ADMIN' in app.user.roles %}
-						<div class="mt-8 py-4 max-w-[589px] w-11/12 mx-auto lg:mx-auto lg:w-5/6 font-secondary border border-solid border-400 flex flex-col gap-8 items-center">
+						<div class="mt-8 py-4 max-w-[589px] w-11/12 mx-auto lg:w-5/6 font-secondary border border-solid border-400 flex flex-col gap-8 items-center">
 							<h2 class="text-lg font-primary">Envie d'aller plus vite ?
 							</h2>
 							<p class="text-center w-11/12 mx-auto">Vous pouvez créer des fiches de pré-remplissage personnalisés juste
