--- a/templates/Contact/contact.html.twig
+++ b/templates/Contact/contact.html.twig
@@ -8,7 +8,7 @@
 		<div class="-z-10 2xl:w-[70%] hidden lg:block w-[55%] reservation_container contact_image relative"></div>
 		<section class="w-full lg:w-[45%] mb-16">
 			<div class="w-full mx-auto relative top-1/2 -translate-y-1/2">
-				<h1 class="title_section text-secondary">Pour nous contacter</h1>
+				<h1 class="title_section ">Pour nous contacter</h1>
 				<div class="font-secondary text-secondary text-center my-5 text-lg px-4 ">
 					<p>Une demande spécifique ?</p>
 					<p>Contactez directement notre équipe !</p>
