--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
     <main class="w-full">
         <section class="min-h-screen h-full w-full">
-            <div class="image absolute filter blur-sm md:blur-md h-full w-full -z-10">
+            <div class="home_image absolute filter blur-sm md:blur-md h-full w-full -z-10">
             </div>
             <div class="relative flex flex-col justify-center items-center text-secondary bg-transparent min-h-screen px-4">
                 <h1 class="font-secondary text-home-title flex flex-col items-start md:w-[500px] ld:w-[780px]">Bienvenue au <span class="font-primary text-home-quai pt-2 self-center">Quai Antique</span></h1>
